--- a/SPRING/14_TEST/pom.xml
+++ b/SPRING/14_TEST/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>my.project.member</groupId>
+	<groupId>com.sprng</groupId>
 	<artifactId>main</artifactId>
-	<name>TEST</name>
+	<name>Sample</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -32,47 +32,67 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-				
-				
-				
-		<!-- mariadb JDBC -->
-		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-		<dependency>
-		    <groupId>org.mariadb.jdbc</groupId>
-		    <artifactId>mariadb-java-client</artifactId>
-		    <version>2.7.3</version>
-		</dependency>		
 		
-		<!-- connection pool -->
-		<!-- https://central.sonatype.com/artifact/commons-dbcp/commons-dbcp -->
+		
+		<!-- jackson-databind : Map 등을 json 형태로, 문자열을 json 형태로 변경 -->
+		<!-- https://central.sonatype.com/artifact/com.fasterxml.jackson.core/jackson-databind | 2.14.2 로 수정 -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind/2.14.2 -->
+		<!-- version 은 jdk 버전에 따라 달라질 수 있다.(예: HDK 1.7 -> 2.8.6 -->
 		<dependency>
-		    <groupId>commons-dbcp</groupId>
-		    <artifactId>commons-dbcp</artifactId>
-		    <version>1.4</version>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.14.2</version>
 		</dependency>
 		
-		<!-- spring-jdbc -->
-		<!-- https://central.sonatype.com/artifact/org.springframework/spring-jdbc || version을 ${org.springframework-version}으로 수정-->
+		<!-- JDBC -->
+		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-jdbc</artifactId>
-		    <version>${org.springframework-version}</version>
+    		<groupId>org.mariadb.jdbc</groupId>
+    		<artifactId>mariadb-java-client</artifactId>
+    		<version>2.7.3</version>
+		</dependency>
+		
+		<!-- connection pool -->
+		<!--https://central.sonatype.com/artifact/commons-dbcp/commons-dbcp -->
+		<dependency>
+    		<groupId>commons-dbcp</groupId>
+    		<artifactId>commons-dbcp</artifactId>
+    		<version>1.4</version>
+		</dependency>
+		
+		<!-- Spring-jdbc -->
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-jdbc</artifactId>
+    		<version>${org.springframework-version}</version>
 		</dependency>
 		
 		<!-- mybatis -->
-		<!-- https://central.sonatype.com/artifact/org.mybatis/mybatis || version을 3.4.6으로 수정 -->
 		<dependency>
-		    <groupId>org.mybatis</groupId>
-		    <artifactId>mybatis</artifactId>
-		    <version>3.4.6</version>
+  	 		<groupId>org.mybatis</groupId>
+    		<artifactId>mybatis</artifactId>
+    		<version>3.4.6</version>
 		</dependency>
 		
-		<!--  mybatis-spring -->		
-		<!-- https://central.sonatype.com/artifact/com.pig4cloud/mybatis-spring -->
+		<!-- mybatis-spring -->
 		<dependency>
-		    <groupId>com.pig4cloud</groupId>
-		    <artifactId>mybatis-spring</artifactId>
-		    <version>0.0.2</version>
+    		<groupId>org.singledog</groupId>
+    		<artifactId>mybatis-spring</artifactId>
+    		<version>1.3.3</version>
+		</dependency>
+		
+		<!-- commons-io -->
+		<dependency>
+  		  <groupId>commons-io</groupId>
+		  <artifactId>commons-io</artifactId>
+  		  <version>2.7</version>
+		</dependency>
+
+		<!-- commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
 		</dependency>
 		
 		
