--- a/SPRING/14_TEST/src/main/webapp/WEB-INF/web.xml
+++ b/SPRING/14_TEST/src/main/webapp/WEB-INF/web.xml
@@ -3,34 +3,52 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
+	<!-- web.xml은 서버 접속시 가장 먼저 읽힌다. -->
+	<!-- 그래서 주요 설정파일 및 인코딩 설정 등이 들어간다 -->
 	
 	
 	<!-- 한글 깨짐 방지 -->
-	<!-- 어떤 필터를 사용하겠다. -->
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<!-- 필터 이름, 사용할 클래스 지정, 인코딩방식 UTF-8, 강제 인코딩 true -->
+   <!-- 사용할 필터 이름과 연결할 클래스 -->
+   <filter>
+      <filter-name>encodingFilter</filter-name>
+       <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+       <!-- 인코딩 종류 -->
+       <init-param>
+           <param-name>encoding</param-name>
+           <param-value>UTF-8</param-value>
+       </init-param>
+       <!-- 강제 인코딩 여부 -->
+       <init-param>
+           <param-name>forceEncoding</param-name>
+           <param-value>true</param-value>
+       </init-param>
+   </filter>
+   <!-- 어떤 필터를 언제 사용 할 것인가? -->
+   <filter-mapping>
+       <filter-name>encodingFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+   </filter-mapping> 
+   
+   <!-- 특정 에러 코드 발생시 특정 요청 호출 -->
+   <error-page>
+   		<error-code>404</error-code>
+   		<location>/error/404</location>
+	</error-page>
+
+	<!-- 서버 시작전에 나타나는 에러의 경우 반응할수 없다. -->
+   	<error-page>
+   		<error-code>500</error-code>
+   		<location>/error/500</location>
+   	</error-page>	
+   
+   <!-- 특정 Exception 에 반응 할수도 있다.
+   	<error-page>
+   		<exception-type>java.io.IOException</exception-type>
+   		<location>/error/IOException</location>
+   	</error-page>
+	 -->
 	
-	<!-- 언제 사용하겠다. -->
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<!-- encodingFilter 를 모든 상황에서 다써라 -->
-	
-	
-	
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- 서버가 켜지면 최초로 읽는 설정 파일의 위치 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
@@ -41,7 +59,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- Processes application requests -->
+	<!-- 서버에 요청을 받았을때 읽는 설정 파일 -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
