--- a/BOOT/06_Board/pom.xml
+++ b/BOOT/06_Board/pom.xml
@@ -37,6 +37,13 @@
 		</dependency>
 		
 		
+		<!-- log4jdbc -->
+		<!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
+		<dependency>
+		    <groupId>org.bgee.log4jdbc-log4j2</groupId>
+		    <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+		    <version>1.16</version>
+		</dependency>
 		
 		<!-- jsp 자신이 사용하는 톰캣 버전으로 -->
 		<dependency>
