--- a/BOOT/06_Board/src/main/resources/application.properties
+++ b/BOOT/06_Board/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.charset=UTF-8
 
 # db connect infomation
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/mydb
 spring.datasource.username=web_user
 spring.datasource.password=pass
 
@@ -20,3 +20,6 @@ mybatis.type-aliases-package=kr.co.gudi.dto
 #jsp(prefix, suffix)
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
+#loggin
+logging.level.root=info
